# compli

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/: pyproject.toml
apps/api/app/: main.py
apps/api/app/adapters/: slack.py
apps/api/app/adapters/slack/: slack_bolt.py  slack_bolt_test.py
apps/api/app/core/: settings.py
apps/api/app/infra/: crypto.py
apps/api/app/models/: slack.py
apps/api/app/routes/: slack_ingest.py  slack_router.py
apps/api/app/util/: slack_signature.py
apps/tests/: test_slack_signature.py
